@@ -2801,4 +2801,22 @@ or download tarballs for
 </p>
     </content>
   </item>
+
+  <item>
+    <date>2007-05-26 14:10</date>
+    <title>GNonLin 0.10.8 release</title>
+    <content>
+<p>
+The GStreamer team is proud to announce a new release in the 0.10.x stable
+series of GNonLin.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gnonlin/0.10.8.html">gnonlin</a>,
+or download tarballs for
+<a href="&site;/src/gnonlin/gnonlin-0.10.8.tar.bz2">gnonlin</a>.
+</p>
+    </content>
+  </item>
+
 </news>
