@@ -1,0 +1,67 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gnonlin</module>
+  <module-fancy>GNonLin Non-Linear Editing Plug-ins</module-fancy>
+  <name>Half a kilo of power points</name>
+  <version>0.10.8</version>
+
+  <intro>
+
+<p>
+The GStreamer team is proud to announce a new release
+in the 0.10.x stable series of GNonLin.
+</p>
+
+<p>
+This module contains a set of plug-ins for GStreamer to ease the
+creation of multimedia editors, or any other application where a
+timeline-oriented use of GStreamer makes sense.
+</p>
+<p>
+These elements include:
+<dl>
+<dt>gnlsource</dt>
+<dd>An element for using source elements/bins in a GnlComposition</dd>
+<dt>gnlfilesource</dt>
+<dd>A higher-level element for using a uri in a GnlComposition</dd>
+<dt>gnlcomposition</dt>
+<dd>A container element that handles GNonLin objects</dd>
+<dt>gnloperation</dt>
+<dd>An element for using filters in a GnlComposition</dd>
+</dl>
+</p>
+  </intro>
+  <features>
+    <feature>Fix for latest GstGhostPad behaviour</feature>
+    <feature>Memory leak fixes</feature>
+  </features>
+
+  <applications>
+GNonLin is primarily used by PiTiVi (http://www.pitivi.org/) and Jokosher (http://www.jokosher.org/).
+  </applications>
+        <contributors>
+	<person>Edward Hervey</person>
+	<person>Thomas Vander Stichele</person>
+	<person>Wim Taymans</person>
+  </contributors>
+
+
+
+
+  
+
+  
+
+  <bugs>
+    <bug>
+      <id>421055</id>
+      <summary>GstGhostPad fails when set to PLAYING for the second time</summary>
+    </bug>
+    <bug>
+      <id>435215</id>
+      <summary>Failures with simple GNonLin player</summary>
+    </bug>
+  </bugs>
+
+</release>
